Fix broken CSS on workshops page
Fix #593

Fix broken CSS on workshops page by using a correct reference to the
workshop list element.

--- a/css/chimad.css
+++ b/css/chimad.css
@@ -376,7 +376,7 @@ p.examples {
     padding-top: 10px;
 }
 
-.workshop {
+#workshops .li {
     border-color: transparent;
     border-bottom-style: none;
     margin-bottom: 10px;
